# polily

./: .envrc.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.example.yaml  config.minimal.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-to-pypi.yml  sync-master-to-dev.yml
config/: phrases.yaml
data/: calendar.yaml
data/checklists/: crypto_threshold.yaml  default.yaml  economic_data.yaml  political.yaml
docs/: architecture.md  market-type-guide.md  plugin-guide.md  runtime-i18n-design.md  ui-guide.md
polily/: __init__.py  analysis_store.py  api.py  cli.py  doctor.py  match.py  orderbook.py  pnl.py  scan_log.py
polily/agents/: base.py  frontmatter.py  legacy_schemas.py  manual.md  narrative_writer.py  narrator_registry.py  protocol.md  schemas.py
polily/agents/prompts/: narrative_writer.md
polily/config/: __init__.py  phrases.en.yaml  phrases.zh.yaml
polily/core/: config.py  config_store.py  config_yaml.py  db.py  event_store.py  events.py  fees.py  lifecycle.py  migration_v0_11_0.py  models.py  monitor_store.py  paths.py  positions.py  strategy_store.py  trade_engine.py  update_check.py  user_prefs.py  wallet.py  wallet_reset.py
polily/core/config_docs/: __init__.py  _loader.py  active_strategy.en.md  active_strategy.zh.md  mispricing.en.md  mispricing.zh.md  movement.en.md  movement.md  scoring.en.md  scoring.zh.md  wallet.en.md  wallet.md  wallet.zh.md
polily/daemon/: auto_monitor.py  close_event.py  event_metadata_regen.py  launchctl_query.py  poll_job.py  resolution.py  scheduler.py  score_refresh.py
polily/market_types/: __init__.py  crypto_threshold.py  protocol.py  registry.py
polily/monitor/: drift.py  event_metrics.py  models.py  scorer.py  signals.py  store.py
polily/scan/: commentary.py  event_scoring.py  filters.py  mispricing.py  pipeline.py  reporting.py  scoring.py  tag_classifier.py
polily/strategies/: default.md
polily/tui/: _dispatch.py  app.py  bindings.py  commentary_render.py  formatters.py  i18n.py  icons.py  lifecycle_labels.py  monitor_format.py  service.py  terminal_cleanup.py  theme.py  utils.py
polily/tui/components/: __init__.py  analysis_panel.py  binary_structure_panel.py  event_header.py  event_kpi.py  legacy_analysis_panel.py  markdown_analysis_view.py  movement_sparkline.py  position_panel.py  sub_market_table.py
polily/tui/css/: tokens.tcss
polily/tui/i18n/: __init__.py  loader.py
polily/tui/screens/: main.py
polily/tui/views/: _config_fatal_screen.py  _trade_preview.py  _wallet_overview.py  archived_events.py  changelog.py  companions.py  config.py  config_modals.py  config_weight_modal.py  event_detail.py  history.py  monitor_list.py  monitor_modals.py  paper_status.py  scan_log.py  (+6 more)
scanner/: __init__.py  analysis_store.py  api.py  archive.py  auto_monitor.py  auto_resolve.py  backtest.py  calendar_events.py  checklist.py  cli.py  config.py  daemon_notify.py  daily_briefing.py  db.py  doctor.py  drift_detector.py  export.py  filters.py  graduation.py  market_classifier.py  market_state.py  match.py  mispricing.py  models.py  movement_scorer.py  movement_store.py  notifications.py  onboarding.py  orderbook.py  paper_trading.py  pipeline.py  position_phase.py  price_feeds.py  price_poller.py  render.py  reporting.py  scan_log.py  scoring.py  url_parser.py  utils.py  (+3 more)
scanner/agents/: base.py  briefing_analyst.py  cross_domain.py  market_analyst.py  narrative_writer.py  narrator_registry.py  review_analyst.py  schemas.py
scanner/core/: clob.py  config.py  db.py  event_store.py  events.py  fees.py  lifecycle.py  migration_v060.py  models.py  monitor_store.py  paper_store.py  positions.py  trade_engine.py  wallet.py  wallet_reset.py
scanner/daemon/: auto_monitor.py  close_event.py  poll_job.py  recheck.py  resolution.py  scheduler.py  score_refresh.py
scanner/market_types/: __init__.py  crypto_threshold.py  economic_data.py  political.py  protocol.py  registry.py  social_media.py  sports.py  tech.py
scanner/monitor/: drift.py  models.py  poll.py  scorer.py  store.py
scanner/scan/: commentary.py  event_scoring.py  filters.py  mispricing.py  pipeline.py  reporting.py  scoring.py  tag_classifier.py
scanner/tui/: _dispatch.py  app.py  bindings.py  i18n.py  icons.py  monitor_format.py  service.py  theme.py  utils.py
scripts/: audit_config_usage.py  check_changelog.py  generate_skills.py  generate_snapshots.py  spike_i18n_footer.py  validate_db.py
tests/: conftest.py  test_agent_debug_log_path.py  test_agent_markdown_output.py  test_agent_subprocess_env.py  test_agents_base.py  test_agents_briefing.py  test_agents_cross_domain.py  test_agents_market_analyst.py  test_agents_narrative.py  test_agents_review.py  test_amount_color.py  test_analysis_store.py  test_analysis_store_v0_12_0.py  test_analyze_event_lifecycle.py  test_analyze_event_noactive_error.py  test_analyze_event_single_active.py  test_api.py  test_api_trades.py  test_app_language_toggle.py  test_archive.py  test_archived_events_service.py  test_archived_events_view.py  test_archived_events_view_v080.py  test_audit_script.py  test_auto_monitor_toggle.py  test_auto_resolve.py  test_backtest.py  test_backtest_enhanced.py  test_base_agent_markdown_mode.py  test_binary_structure_panel.py  test_bus_publishers.py  test_calendar.py  test_cancel_running_scan.py  test_changelog_view.py  test_check_changelog_script.py  test_checklist.py  test_cli.py  test_cli_doctor.py  test_cli_path_flags.py  test_cli_watch.py  (+231 more)
tests/agents/: test_narrative_writer_feedback_log.py
tests/tui/: test_companions_view.py  test_config_edit_modal.py  test_config_view.py  test_config_weight_modal.py  test_event_detail_in_place.py  test_fatal_config_screen.py  test_sidebar_config_entry.py  test_strategy_view.py  test_terminal_cleanup.py
(+77 files in other folders)
