[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "polily"
dynamic = ["version"]
description = "A Polymarket monitoring agent that actually works — finds structure, watches movement, sizes risk"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
keywords = ["polymarket", "prediction-market", "decision-support", "tui", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Environment :: Console",
]

dependencies = [
    "httpx>=0.28,<1.0",
    "tenacity>=9.0,<10.0",
    "pydantic>=2.12,<3.0",
    "typer>=0.24,<1.0",
    "rich>=14.0,<15.0",
    "pyyaml>=6.0,<7.0",
    "ccxt>=4.0",
    "textual>=3.0",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3,<2.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "ruff>=0.15",
    "pyright>=1.1",
]

# Version is derived from the nearest git tag via hatch-vcs.
# At release (tag pushed): resolves to the clean tag, e.g. "0.9.3".
# On dev commits past a tag: resolves to e.g. "0.9.3.dev4+g5f43d44" (PEP 440).
# On a dirty tree: resolves to e.g. "0.9.3.dev4+g5f43d44.d20260424".
# No hardcoded string anywhere — tag is the single source of truth.
#
# fallback-version kicks in only when git metadata isn't available at
# build time (e.g. sdist extracted without .git) — deterministic
# instead of leaving the failure mode to chance.
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+unknown"

[tool.hatch.build.targets.wheel]
packages = ["polily"]
# Ship CHANGELOG.md inside the wheel so `ChangelogView` can render it
# via `importlib.resources.files("polily") / "CHANGELOG.md"` after
# pip-install (not just from a source checkout).
force-include = { "CHANGELOG.md" = "polily/CHANGELOG.md" }

[project.scripts]
polily = "polily.cli:app"

[project.urls]
Homepage = "https://github.com/ShiyuCheng2018/polily"
Repository = "https://github.com/ShiyuCheng2018/polily"
Issues = "https://github.com/ShiyuCheng2018/polily/issues"

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["N806", "SIM102", "SIM108", "SIM117", "SIM118", "E501", "TCH001", "TCH002", "TCH003"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pyright (type checking)
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
